--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styel/style.css">
 </head>
 <body>
-    <h3>
-        dkfksldfj
-    </h3>
+         <div class="container">
+            <div class="border-box"><h3>1</h3></div>
+            <div class="border-box2"> <h3>2</h3> 
+
+                <div class="child-div1"></div>
+
+                <div class="b-box3">
+                    <div class="child-div2"><h3>3</h3></div>
+                    <div class="child-div3"><h3>4</h3></div>
+                </div>
+           
+            </div>
+         </div>
+ 
 </body>
 </html>
